--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
+# MONGO_URI=mongodb+srv://Rizmia:GreenHarvest_ITPM@aiassistant.zqpaq.mongodb.net/
+# PORT=5000
 MONGO_URI=mongodb+srv://Rizmia:GreenHarvest_ITPM@aiassistant.zqpaq.mongodb.net/
 PORT=5000
+JWT_SECRET=your-secret-key-12345  # Replace with a strong, unique key
